refactor configs requests