@@ -6,6 +6,7 @@ import com.example.start_jobs.entity.Candidatura;
 import com.example.start_jobs.entity.StatusCandidatura;
 import com.example.start_jobs.entity.Usuario;
 import com.example.start_jobs.entity.Vaga;
+import com.example.start_jobs.exceptions.StatusAlreadyExistsException;
 import com.example.start_jobs.repository.CandidaturaRepository;
 import com.example.start_jobs.repository.StatusCandidaturaRepository;
 import com.example.start_jobs.repository.UsuarioRepository;
@@ -15,10 +16,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -36,6 +34,7 @@ public class CandidaturaService {
     @Autowired
     private VagaRepository vagaRepository;
 
+    @Transactional
     public Candidatura criarCandidatura(CandidaturaDTO candidaturaDTO) {
         Optional<Usuario> usuarioOptional = usuarioRepository.findById(candidaturaDTO.getIdUsuario());
 
@@ -90,7 +89,7 @@ public class CandidaturaService {
     }
 
 
-
+    @Transactional
     public List<CandidaturaDTO> listarCandidaturas() {
         List<Candidatura> candidatura = candidaturaRepository.findAll();
         return candidatura.stream()
@@ -98,10 +97,12 @@ public class CandidaturaService {
                 .collect(Collectors.toList());
     }
 
+    @Transactional
     public Optional<Candidatura> buscarCandidaturaPorId(Long id) {
         return candidaturaRepository.findById(id);
     }
 
+    @Transactional
     public List<CandidaturaDTO> listarCandidaturasPorUsuario(Long idUsuario) {
         List<Candidatura> candidaturas = candidaturaRepository.findByUsuarioIdUsuario(idUsuario);
 
@@ -112,7 +113,7 @@ public class CandidaturaService {
                 .collect(Collectors.toList());
     }
 
-
+    @Transactional
     public Candidatura atualizarCandidatura(Long id, Candidatura candidaturaAtualizada) {
         Candidatura candidatura = candidaturaRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Candidatura não encontrada"));
@@ -129,13 +130,13 @@ public class CandidaturaService {
         if (candidaturaOptional.isPresent()) {
             Candidatura candidatura = candidaturaOptional.get();
 
-            for (StatusCandidatura status : candidatura.getStatusCandidatura()) {
-                StatusCandidaturaDTO statusDTO = candidaturaDTO.getStatusCandidatura().stream()
-                        .filter(dto -> dto.getId().equals(status.getIdStatus()))
-                        .findFirst()
-                        .orElse(null);
+            Map<Integer, StatusCandidatura> statusMap = candidatura.getStatusCandidatura().stream()
+                    .collect(Collectors.toMap(StatusCandidatura::getIdStatus, status -> status));
 
-                if (statusDTO != null) {
+            for (StatusCandidaturaDTO statusDTO : candidaturaDTO.getStatusCandidatura()) {
+                StatusCandidatura status = statusMap.get(statusDTO.getId());
+
+                if (status != null) {
                     status.setApproved(statusDTO.isApproved());
                     status.setRejected(statusDTO.isRejected());
                     if (status.getDataStatus() == null) {
@@ -143,10 +144,11 @@ public class CandidaturaService {
                     }
                 }
             }
-            List<StatusCandidatura> sortedStatus = candidatura.getStatusCandidatura().stream()
+
+            // Ordenando os status por data
+            candidatura.setStatusCandidatura(candidatura.getStatusCandidatura().stream()
                     .sorted(Comparator.comparing(StatusCandidatura::getDataStatus))
-                    .collect(Collectors.toList());
-            candidatura.setStatusCandidatura(sortedStatus);
+                    .collect(Collectors.toList()));
 
             candidaturaRepository.save(candidatura);
 
@@ -157,12 +159,15 @@ public class CandidaturaService {
     }
 
 
+
     @Transactional
     public CandidaturaDTO adicionarNovosStatus(Long id, List<StatusCandidaturaDTO> statusCandidaturaDTOList) {
         Optional<Candidatura> candidaturaOptional = candidaturaRepository.findById(id);
 
         if (candidaturaOptional.isPresent()) {
             Candidatura candidatura = candidaturaOptional.get();
+
+            Set<StatusCandidatura> existingStatuses = new HashSet<>(candidatura.getStatusCandidatura());
 
             List<StatusCandidatura> newStatuses = statusCandidaturaDTOList.stream()
                     .map(statusDTO -> {
@@ -173,9 +178,15 @@ public class CandidaturaService {
                         }
 
                         status.setCandidatura(candidatura);
+
+                        // Verifica se o status já existe
+                        if (existingStatuses.contains(status)) {
+                            throw new StatusAlreadyExistsException("O status já foi adicionado para esta candidatura.");
+                        }
+
                         return status;
                     })
-                    .toList();
+                    .collect(Collectors.toList());
 
             candidatura.getStatusCandidatura().addAll(newStatuses);
 
@@ -186,6 +197,8 @@ public class CandidaturaService {
             throw new RuntimeException("Candidatura não encontrada");
         }
     }
+
+
 
     public void deletarCandidatura(Long id) {
         candidaturaRepository.deleteById(id);
